[package]
name = "tradai_python"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "pyo3_async"
path = "examples/pyo3_async.rs"

[lib]
path = "src/lib.rs"
name = "tradai_python"

[features]
default = ["pyarrow"]
pyarrow = ["arrow"]
static = ["db/rocksdb-vendor"]

[dependencies]

arrow = { package = "arrow2", version = "0.10", optional = true }

strategy = { path = "../strategy", features = ["python"] }
trading = { path = "../trading" }
ext = { path = "../ext" }
db = { path = "../db" }
util = { path = "../util" }
strategy_test_util = { path = "../strategy_test_util" }
stats = { path = "../stats" }
brokers = { path = "../broker" }
backtest = { path = "../backtest" }

# std
chrono = { workspace = true }
inventory = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
strum = { workspace = true }
strum_macros = { workspace = true }

# log / trace
tracing = { workspace = true }
log = { workspace = true }

# python
pyo3 = { workspace = true, features = ["serde", "auto-initialize", "anyhow", "macros"] }
pyo3-asyncio = { workspace = true }
pyo3-chrono = { version = "0.5", features = ["serde"] }
canonical_json = { version = "0.4.0", optional = true }
inline-python = { version = "0.10" }
#dict_derive = "0.4.0"
pythonize = { workspace = true }

# async
actix = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

