[package]
name = "tradai_python"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[example]]
name = "pyo3_async"
path = "examples/pyo3_async.rs"

[lib]
path = "src/lib.rs"
name = "tradai_python"

[features]
default = ["pyarrow"]
pyarrow = ["arrow"]
static = ["db/rocksdb-vendor"]

[dependencies]

arrow = { version = "38.0.0", optional = true, features = ["ffi"] }
#datafusion-python = { git = "https://github.com/apache/arrow-datafusion-python", rev = "5ae7c5025fdb04a2d5f06ba1aa70ecc32aad8cfd" }
strategy = { path = "../strategy", features = ["python"] }
trading = { path = "../trading" }
ext = { path = "../ext" }
db = { path = "../db" }
util = { path = "../util" }
strategy_test_util = { path = "../strategy_test_util" }
stats = { path = "../stats" }
brokers = { path = "../broker" }
backtest = { path = "../backtest" }

# std
chrono = { workspace = true }
inventory = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
strum = { workspace = true }
strum_macros = { workspace = true }
indoc = "2.0"

# log / trace
tracing = { workspace = true }
log = { workspace = true }

# python
pyo3 = { workspace = true, features = ["serde", "auto-initialize", "anyhow", "macros", "chrono"] }
pyo3-asyncio = { workspace = true }
inline-python = { git = "https://github.com/Igosuki/inline-python" }
#dict_derive = "0.4.0"
pythonize = { workspace = true }

# async
actix = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]



