[package]
name = "python_dylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "tradai"

[package.metadata.maturin]
name = "tradai"
python-source = "tradai"

[dependencies]
tradai_python = { path = "../python_crate", features = ["static"] }

pyo3 = { version = "^0.15", features = ["serde", "auto-initialize", "extension-module"] }
pyo3-log = { version = "0.5"}
log = "0.4"

[patch.crates-io]
pyo3 = { git = "https://github.com/aviramha/pyo3.git", rev = "db53229bc7a737d0300ff2c5fbc7ea80040ec263", version = "^0.15" }
pythonize = { git = "https://github.com/Igosuki/pythonize", rev = "d5309ca6491cdfb9e356d38b244e20b29a206bbc", version = "^0.15" }
datafusion = { git = "https://github.com/Igosuki/arrow-datafusion", branch = "arrow2_i" }
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2.git", rev = "dded624dc6a6347d7e937efee7779a44a51c4edb" }
inventory = { git = "https://github.com/Igosuki/inventory.git" }
