[package]
name = "python_dylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "tradai"

[package.metadata.maturin]
name = "tradai"
python-source = "python_src"

[dependencies]
tradai_python = { path = "../python_crate", features = ["static"] }

pyo3 = { version = "^0.15", features = ["serde", "auto-initialize", "extension-module"] }
pyo3-log = { version = "0.5"}
log = "0.4"

[patch.crates-io]
pyo3 = { git = "https://github.com/aviramha/pyo3.git", rev = "db53229bc7a737d0300ff2c5fbc7ea80040ec263", version = "^0.15" }
pythonize = { git = "https://github.com/Igosuki/pythonize", rev = "d5309ca6491cdfb9e356d38b244e20b29a206bbc", version = "^0.15" }
datafusion = { git = "https://github.com/Igosuki/arrow-datafusion", branch = "arrow2_dict_key_fix" }
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2.git", rev = "a87c758a80facbfbcde4768ad42cdf4c5c2cc5a8" }
inventory = { git = "https://github.com/Igosuki/inventory.git" }
