[package]
name = "python_dylib"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"
name = "tradai"

[package.metadata.maturin]
name = "tradai"
python-source = "python_src"

[dependencies]
tradai_python = { path = "../python_crate", features = ["static"] }

pyo3 = { workspace = true, features = ["serde", "auto-initialize", "extension-module"] }
pyo3-log = { workspace = true }
log = { workspace = true }

[patch.crates-io]
inventory = { git = "https://github.com/Igosuki/inventory.git" }
#avro-rs = { git = "https://github.com/Igosuki/avro-rs.git", branch = "update_deps" }
yata = { git = "https://github.com/Igosuki/yata.git", branch = "add_send" }
