[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"

[project]
name = "tradai"
version = "2021.0.0"
description = "The python SDK of the tradai api"
requires-python = ">=3.10"
keywords = ["trading", "backtest", "strategy", "tradai"]
authors = [
    {email = "igosuki.github@gmail.com"},
    {name = "Guillaume Balaine"}
]
maintainers = [
    {name = "Guillaume Balaine", email = "igosuki.github@gmail.com"}
]
classifiers = [
    "Development Status :: 1 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Rust"
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest < 5.0.0",
    "pytest-cov[all]"
]

[project.urls]
homepage = "github.com/Igosuki/tradai-platform"
repository = "github.com/Igosuki/tradai-platform"
changelog = "github.com/Igosuki/tradai-platform"

