[package]
name = "trader"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2021"

build = "build.rs"

[lib]
name = "trader"
path = "src/lib.rs"

[[bin]]
name = "trader"
path = "src/main.rs"

[features]
default = []
flame = ["dep:flame", "flamer"]
gprof = ["gperftools"]
zstd = ["awc/compress-zstd", "actix-web/compress-zstd"]
checkers_alloc = ["checkers"]
dialog_cli = ["dialoguer", "glob"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]
release_default = ["release_max_level_debug", "zstd"]

[dependencies]
# Self crates
models = { path = "../logging" }
util = { path = "../util" }
account = { path = "../portfolio" }
strategy = { path = "../strategy" }
strategies = { path = "../strategies" }
#coinnect_rt = { git = " ssh://git@github.com/Igosuki/coinnect_rt.git" }
coinnect_rt = { path = "../coinnect" }
db = { path = "../db" }
metrics = { path = "../metrics" }
ext = { path = "../ext" }
trading = { path = "../trading" }

# actix
actix = "0.12"
actix-rt = "2.5"
actix-codec = "0.4"
actix-cors = { version = "0.6.0-beta.8", default-features = false }
actix-web = { version = "4.0.0-beta.17", features = ["openssl", "compress-brotli", "compress-gzip", "cookies"], default-features = false }
actix_derive = "0.6"
awc = { version = "3.0.0-beta.13", features = ["openssl", "compress-brotli", "compress-gzip", "cookies"], default-features = false }

# API Server
juniper = { version = "^0.15", features = ["expose-test-schema"] }
native-tls = "0.2"

# Errors
anyhow = "1.0"
thiserror = "1.0"

# Codecs
avro-rs = { git = "https://github.com/Igosuki/avro-rs.git", branch = "master_merge" }

# Async
futures = { version = "0.3", features = ["thread-pool"] }
tokio = { version = "1", features = ["full", "time"] }
tokio-stream = { version = "0.1", features = ["sync", "fs", "net", "io-util", "tokio-util", "signal", "time"] }

# Std
byte-unit = "4.0"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
lazy_static = "1.4"
libc = "0.2"
notify = "4.0"
once_cell = "1.4"
parse_duration = "2.1"
rand = "0.8"
uuid = { version = "0.8", features = ["v4"] }
url = "2.2"
glob = { version = "0.3", optional = true }


# Derive
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }

# CLI
config = { version = "0.11", features = ["yaml", "toml", "json"], default-features = false }
clap = "3.0"
dialoguer = { version = "0.9", optional = true }
structopt = "0.3"

# Crypto
data-encoding = "2.2"
sha2 = "0.10"

# Log / Monitoring / Tracing
env_logger = "0.9"
tracing = { version = "0.1", features = ["log"] }
prometheus = { version = "0.13", features = ["nightly", "push", "process", "gen"] }
online = "3.0"
measure_time = "0.8"

# Profiling
flame = { version = "0.2", optional = true }
flamer = { version = "0.4", optional = true }
gperftools = { version = "0.2", optional = true, features = ["heap"] }
checkers = { version = "0.6", optional = true, features = ["zeroed", "backtrace", "checkers-macros", "fxhash", "macros", "realloc"] }

# Queues
nats = "0.16"

[dev-dependencies]
tempdir = "0.3"
