[package]
name = "trader"
version.workspace = true
authors.workspace = true
edition.workspace = true

build = "build.rs"

[lib]
name = "trader"
path = "src/lib.rs"

[[bin]]
name = "trader"
path = "src/main.rs"

[features]
default = ["native-tls"]
flame = ["dep:flame", "flamer"]
gprof = ["gperftools"]
zstd = ["awc/compress-zstd", "actix-web/compress-zstd"]
checkers_alloc = ["checkers"]
dialog_cli = ["dialoguer", "glob"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]
release_default = ["release_max_level_debug", "zstd"]
rustls = ["actix-web/rustls", "awc/rustls"]
native-tls = ["actix-web/openssl", "awc/openssl"]

[dependencies]
# Self crates
logging = { path = "../logging" }
util = { path = "../util" }
account = { path = "../portfolio" }
strategy = { path = "../strategy" }
strategies = { path = "../strategies" }
brokers = { path = "../broker", features = ["binance"] }
db = { path = "../db" }
metrics = { path = "../metrics" }
ext = { path = "../ext" }
trading = { path = "../trading" }

# actix
actix = { workspace = true }
actix-rt = { workspace = true }
actix-codec = { workspace = true }
actix-cors = { workspace = true }
actix-web = { workspace = true }
actix_derive = { workspace = true }
awc = { workspace = true }

# API Server
juniper = { git = "https://github.com/Igosuki/juniper", branch = "uuid_latest", version = "^0.16.0-dev", features = ["expose-test-schema"] }
native-tls = "0.2"

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

# Std
byte-unit = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
notify = "5.0"
once_cell = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
glob = { workspace = true, optional = true }
multimap = "0.8.3"

# Derive
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# CLI
config = { workspace = true }
clap = { workspace = true }
dialoguer = { version = "0.10", optional = true }
structopt = { workspace = true }

# Crypto
data-encoding = { workspace = true }
sha2 = { workspace = true }

# Log / Monitoring / Tracing
env_logger = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true, features = ["nightly", "push", "process", "gen"] }
online = "4.0"
measure_time = { workspace = true }

# Profiling
flame = { workspace = true, optional = true }
flamer = { workspace = true, optional = true }
gperftools = { version = "0.2", optional = true, features = ["heap"] }
checkers = { version = "0.6", optional = true, features = ["zeroed", "backtrace", "checkers-macros", "fxhash", "macros", "realloc"] }

# Queues
nats = "0.18"

[dev-dependencies]
tempdir = { workspace = true }
