[package]
name = "stats"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "quantile_peroxide"
path = "benches/quantile_peroxide.rs"
harness = false

[features]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
trading = { path = "../trading" }

anyhow = "1.0"
itertools = "0.10"
#streaming-stats = "0.2.3"
#average = "0.10"
#nalgebra = "0.21.0"

# Optional dependencies to be used later
# tensorflow = "0.16"

# Math
num-traits = "0.2"
peroxide = "0.30"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["log"] }
ta = { version = "0.5", features = ["serde"] }
yata = { version = "0.5" }
ordered-float = "2.8"

# std
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.8"

[dev-dependencies]
float-cmp = "0.9"
rand = "0.8"
criterion = { version = "0.3", features = ["async_tokio"] }
