[package]
name = "stats"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "quantile_peroxide"
path = "benches/quantile_peroxide.rs"
harness = false

[features]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
anyhow = { workspace = true }
itertools = { workspace = true }
# Optional dependencies to be used later
#streaming-stats = { version  = "0.2.3", optional = true }
#average = { version  = "0.13", optional = true }
#nalgebra = { version  = "0.30", optional = true }
ndarray = { version = "0.15", optional = true }
#tensorflow = { version = "0.17", optional = true }

# Math
num-traits = "0.2"
peroxide = "0.32"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ta = { version = "0.5", features = ["serde"] }
yata = { version = "0.6", features = ["period_type_u32", "serde"] }
ordered-float = { workspace = true }
ringbuffer = "0.10"
smallvec = { workspace = true }
strum = { workspace = true }

# std
chrono = { workspace = true }
prettytable-rs = "0.8"
strum_macros = { workspace = true }

[dev-dependencies]
float-cmp = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true }
pretty_assertions = { workspace = true }
