[package]
name = "strategies"
version = "0.1.0"
edition = "2021"

[lib]
name = "strategies"
path = "src/lib.rs"

[features]
backtests = []

[dependencies]

strategy = { path = "../strategy" }
trading = { path = "../trading" }
stats = { path = "../stats" }
util = { path = "../util" }
ext = { path = "../ext" }
metrics = { path = "../metrics" }
brokers = { path = "../broker" }
db = { path = "../db" }
account = { path = "../portfolio" }

# actix
actix = "0.12"

# std
chrono = { version = "0.4", features = ["serde"] }
inventory = "0.2"
uuid = { version = "1.0.0-alpha", features = ["v4", "fast-rng",] }
itertools = "0.10"
ordered-float = "2.1"
lazy_static = "1.4"
derivative = "2.2"

# CLI
parse_duration = "2.1"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Derive
serde_json = "1.0"
serde = "1.0"

# Tracing / Logging / Monitoring
prometheus = "0.13"
tracing = "0.1"

# codec
snap = "1.0"

[dev-dependencies]
strategy_test_util = { path = "../strategy_test_util", features = ["trading_test_util"] }
backtest = { path = "../backtest" }
