[package]
name = "strategies"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "strategies"
path = "src/lib.rs"

[features]
backtests = ["backtest", "plotly", "brokers/mock_time"]

[dependencies]

backtest = { path = "../backtest", optional = true }
strategy = { path = "../strategy" }
trading = { path = "../trading" }
stats = { path = "../stats" }
util = { path = "../util" }
ext = { path = "../ext" }
metrics = { path = "../metrics" }
brokers = { path = "../broker" }
db = { path = "../db" }
account = { path = "../portfolio" }

# actix
actix = { workspace = true }
actix-rt = { workspace = true }

# std
chrono = { workspace = true }
inventory = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
itertools = { workspace = true }
ordered-float = { workspace = true }
lazy_static = { workspace = true }
derivative = { workspace = true }
once_cell = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

# Derive
serde_json = { workspace = true }
serde = { workspace = true }

# Tracing / Logging / Monitoring
prometheus = { workspace = true }
tracing = { workspace = true }

# codec
snap = { workspace = true }

plotly = { workspace = true, optional = true }

[dev-dependencies]
strategy_test_util = { path = "../strategy_test_util", features = ["trading_test_util"] }
env_logger = { workspace = true }
backtest = { path = "../backtest" }
plotly = { workspace = true }
