[package]
name = "strategy"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "strategy"
path = "src/lib.rs"


[features]
zstd = ["awc/compress-zstd"]
backtests = ["util/mock_time"]
live_e2e_tests = []
manual_e2e_tests = []
python = ["pyo3"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
# trader
db = { path = "../db" }
ext = { path = "../ext" }
util = { path = "../util" }
metrics = { path = "../metrics" }
coinnect_rt = { path = "../coinnect" }
stats = { path = "../stats" }
trading = { path = "../trading" }
account = { path = "../portfolio" }

# actor
actix = "0.12"
actix_derive = "0.6"

# io
csv = "1.1"

# std
derivative = "2.2"
derive_more = "0.99"
env_logger = "0.9"
itertools = "0.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
backoff = "0.4"
lazy_static = "1.4"
ordered-float = "2.1"
parse_duration = "2.1"
strum = "0.23"
strum_macros = "0.23"
thiserror = "1.0"
inventory = "0.2"
typed-builder = "0.9"
once_cell = "1.9"
smallvec = "1.7"

# async
futures = { version = "0.3", features = ["async-await", "alloc"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# graph_ql
juniper = { version = "^0.15", features = ["expose-test-schema"] }

# metrics and tracing
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"

# metrics
prometheus = { version = "0.13", features = ["nightly", "push", "process", "gen"] }

# codec
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }

# python
pyo3 = { version = "^0.15", optional = true }

[dev-dependencies]
# ours
util = { path = "../util" }
binance-rs-async = { version = "1.1.4" }
trading = { path = "../trading", features = ["test_util"] }

# actix
actix-http = "3.0.0-beta"
awc = { version = "3.0.0-beta", features = ["openssl", "compress-brotli", "compress-gzip", "cookies"], default-features = false }

# plots
hdrhistogram = "7"

# test
fake = { version = "2.4", features = ['chrono'] }
tempdir = "0.3"
quickcheck = "1.0"
pretty_assertions = "1.0"

# std
bytes = "1.0"
bytestring = "1.0.0"
rand = "0.8"
maplit = "1.0"
multimap = "0.8"

# http
http = "0.2"
httpmock = { version = "0.6", default-features = false }
socket2 = "0.4"

# Async
tokio-stream = { version = "0.1", features = ["sync", "fs", "net", "io-util", "tokio-util", "signal", "time"] }

