[package]
name = "strategy"
version.workspace = true
authors.workspace = true
edition.workspace = true


[lib]
name = "strategy"
path = "src/lib.rs"


[features]
zstd = ["awc/compress-zstd"]
backtests = ["util/mock_time"]
live_e2e_tests = []
manual_e2e_tests = []
python = ["pyo3"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[dependencies]
# trader
db = { path = "../db" }
ext = { path = "../ext" }
util = { path = "../util" }
metrics = { path = "../metrics" }
brokers = { path = "../broker", features = ["binance", "native-tls"] }
stats = { path = "../stats" }
trading = { path = "../trading" }
account = { path = "../portfolio" }

# actor
actix = { workspace = true }
actix_derive = { workspace = true }

# io
csv = "1.1"

# std
derivative = { workspace = true }
derive_more = { workspace = true }
env_logger = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
backoff = { workspace = true }
lazy_static = { workspace = true }
ordered-float = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
inventory = { workspace = true }
typed-builder = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }

# async
futures = { workspace = true, features = ["async-await", "alloc"] }
async-trait = { workspace = true }
tokio = { workspace = true }

# graph_ql
juniper = { git = "https://github.com/Igosuki/juniper", branch = "uuid_latest", version = "^0.16.0-dev", features = ["expose-test-schema"] }

# metrics and tracing
tracing = { workspace = true }
tracing-futures = "0.2"

# metrics
prometheus = { workspace = true, features = ["nightly", "push", "process", "gen"] }

# codec
serde = { workspace = true }
serde_json = { workspace = true }

# python
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
# ours
util = { path = "../util" }
binance-rs-async = { workspace = true }
trading = { path = "../trading", features = ["test_util"] }

# actix
actix-http = { workspace = true }
awc = { workspace = true }

# plots
hdrhistogram = { workspace = true }

# test
fake = { workspace = true, features = ['chrono'] }
tempdir = { workspace = true }
quickcheck = { workspace = true }
pretty_assertions = { workspace = true }

# std
bytes = { workspace = true }
bytestring = { workspace = true }
rand = { workspace = true }
maplit = { workspace = true }
multimap = { workspace = true }

# http
http = "0.2"
httpmock = { workspace = true }
socket2 = "0.5.3"

# Async
tokio-stream = { workspace = true, features = ["sync", "fs", "net", "io-util", "tokio-util", "signal", "time"] }

