[package]
name = "strategy_test_util"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trading_test_util = ["trading/test_util"]
default = ["trading_test_util"]

[dependencies]
strategy = { path = "../strategy" }
brokers = { path = "../broker" }
util = { path = "../util" }
db = { path = "../db" }
trading = { path = "../trading" }

#async
tokio = { workspace = true }

#std
chrono = { workspace = true }
maplit = { workspace = true }
multimap = { workspace = true }
itertools = { workspace = true }
tempfile = "3.2"
glob = { workspace = true }

# data
csv = "1.1"

# plots
hdrhistogram = { workspace = true }
plotly = { workspace = true }

# logging
env_logger = { workspace = true }
tracing = { workspace = true }

# derive
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }

