[package]
name = "trading"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "om_tool"
path = "src/om_tool.rs"
required-features = ["binary"]

[features]
binary = ["clap", "structopt"]
test_util = ["binance-rs-async", "httpmock", "rand", "env_logger", "fake", "quickcheck", "brokers/test_util"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]
release_default=["structopt","binary"]

[dependencies]
# own
ext = { path = "../ext" }
brokers = { path = "../broker" }
db = { path = "../db" }
util = { path = "../util" }
# actix
actix = "0.13"
actix_derive = "0.6"
# std
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10"
strum = "0.24"
strum_macros = "0.24"
uuid = { version = "1.0.0-alpha", features = ["v4", "fast-rng",] }
derive_more = "0.99"
anyhow = "1.0"
lazy_static = "1.4"
prometheus = "0.13"
typed-builder = "0.10"
backoff = { version = "0.4", features = ["tokio"] }
ordered-float = "2.10"
# async
futures = { version = "0.3", features = ["async-await", "alloc"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# bin
clap = { version = "3.0", optional = true }
structopt = { version = "0.3", optional = true }

# metrics & tracing
tracing = { version = "0.1", features = ["log"] }

# graphql
juniper = { git = "https://github.com/Igosuki/juniper", branch = "uuid_latest", version = "^0.16.0-dev", features = ["expose-test-schema"] }

binance-rs-async = { version = "1.1.4", optional = true }
httpmock = { version = "0.6", default-features = false, optional = true }
rand = { version = "0.8", optional = true }
env_logger = { version = "0.9", optional = true }
fake = { version = "2.4", features = ["chrono"], optional = true }
quickcheck = { version = "1.0", optional = true }

[dev-dependencies]
broker_test_util = { path = "../broker_test_util" }
binance-rs-async = { version = "1.1.4" }
httpmock = { version = "0.6", default-features = false }
fake = { version = "2.4", features = ["chrono"] }
quickcheck = "1.0"
rand = "0.8"
env_logger = "0.9"
