[package]
name = "trading"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "om_tool"
path = "src/om_tool.rs"
required-features = ["binary"]

[features]
binary = ["clap", "structopt"]
test_util = ["binance-rs-async", "httpmock", "rand", "env_logger", "fake", "quickcheck", "brokers/test_util"]
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]
release_default = ["structopt", "binary"]

[dependencies]
# own
ext = { path = "../ext" }
brokers = { path = "../broker" }
db = { path = "../db" }
util = { path = "../util" }
# actix
actix = { workspace = true }
actix_derive = { workspace = true }
# std
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }
derive_more = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
typed-builder = { workspace = true }
backoff = { workspace = true }
ordered-float = { workspace = true }
# async
futures = { workspace = true, features = ["async-await", "alloc"] }
async-trait = { workspace = true }
tokio = { workspace = true }

# bin
clap = { workspace = true, optional = true }
structopt = { workspace = true, optional = true }

# metrics & tracing
tracing = { workspace = true }

# graphql
juniper = { git = "https://github.com/Igosuki/juniper", branch = "uuid_latest", version = "^0.16.0-dev", features = ["expose-test-schema"] }

binance-rs-async = { workspace = true, optional = true }
httpmock = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
env_logger = { workspace = true, optional = true }
fake = { workspace = true, features = ["chrono"], optional = true }
quickcheck = { workspace = true, optional = true }

[dev-dependencies]
broker_test_util = { path = "../broker_test_util" }
binance-rs-async = { workspace = true }
httpmock = { workspace = true }
fake = { workspace = true, features = ["chrono"] }
quickcheck = { workspace = true }
rand = { workspace = true }
env_logger = { workspace = true }
pretty_assertions = { workspace = true }
