[package]
name = "util"
version = "0.1.0"
authors = ["Guillaume Balaine <igosuki@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# std
chrono = { version = "0.4", features = ["serde"] }
parse_duration = "2.1"
rust_decimal = "1.11"
tempdir = "0.3"
byte-unit = "4.0"
hdrhistogram = "7.4"
mock_instant = "0.2.1"
maplit = "1.0"
anyhow = "1.0"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# async
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "fs", "net", "io-util", "tokio-util", "signal", "time"] }
futures = "0.3"

# Tracing / Logging
pretty_env_logger = "0.4"
opentelemetry = { version = "^0.16", default-features = false, features = ["trace"] }
opentelemetry-jaeger = "0.15"
tracing = { version = "0.1", features = ["log"] }
tracing-flame = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-opentelemetry = "0.16"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "env-filter", "parking_lot"] }
#tracing-timing = "0.5"

[features]
mock_time = []
release_max_level_debug = ["tracing/release_max_level_debug"]
release_max_level_trace = ["tracing/release_max_level_trace"]

[dev-dependencies]
async-stream = "0.3"
